--- a/.github/workflows/update-manual.yml
+++ b/.github/workflows/update-manual.yml
@@ -13,5 +13,7 @@ jobs:
       run: sh ./scripts/build.sh doc
     - name: Push documentation
       run: |
+        git config user.name "${GITHUB_ACTOR}"
+        git config user.email "${GITHUB_ACTOR}@users.noreply.github.com"
         git commit -am 'Update documentation'
-        git push
+        git push origin master
