--- a/.github/workflows/update-manual.yml
+++ b/.github/workflows/update-manual.yml
@@ -1,4 +1,4 @@
-name: CI
+name: Build documentation
 
 on: [push]
 
@@ -23,4 +23,4 @@ jobs:
         git config user.email "${GITHUB_ACTOR}@users.noreply.github.com"
         git add --all
         git commit -am 'Update documentation'
-        git push -u origin master
+        git push
