--- a/.github/workflows/update-manual.yml
+++ b/.github/workflows/update-manual.yml
@@ -9,6 +9,8 @@ jobs:
 
     steps:
     - uses: actions/checkout@v1
+      with:
+        ref: master
     - name: Debug
       run: |
         ls -ahl
