--- a/.github/workflows/update-manual.yml
+++ b/.github/workflows/update-manual.yml
@@ -22,8 +22,8 @@ jobs:
         sh ./scripts/build.sh doc
     - name: Push documentation
       run: |
-        git config user.name "${GITHUB_ACTOR}"
-        git config user.email "${GITHUB_ACTOR}@users.noreply.github.com"
+        git config user.name "daikoku-github-actions"
+        git config user.email "daikoku-github-actions@users.noreply.github.com"
         git add --all
         git commit -am 'Update documentation'
         git push
