--- a/daikoku/javascript/.eslintrc.json
+++ b/daikoku/javascript/.eslintrc.json
@@ -26,10 +26,10 @@
         "react/no-unescaped-entities": 0,
         "react/jsx-uses-react": 1,
         "no-console": "off",
-        "indent": [
-            "error",
-            2
-        ],
+        // "indent": [
+        //     "error",
+        //     2
+        // ],
         "linebreak-style": [
             "error",
             "unix"
