Some fixes before release fix income view by reducing by plan Change <a /> by <Link /> for TopBar title Fix Error if there is no default plan Upgrade otoroshi version for demo

--- a/demo/docker-compose.yml
+++ b/demo/docker-compose.yml
@@ -90,7 +90,7 @@ services:
     expose:
       - 9200
   otoroshi:
-    image: maif/otoroshi:1.4.16-dev-1578921315
+    image: maif/otoroshi:1.4.19
     environment:
       - APP_STORAGE=redis
       - REDIS_HOST=redis
