--- a/daikoku/javascript/package.json
+++ b/daikoku/javascript/package.json
@@ -43,6 +43,7 @@
     "react": "16.12.0",
     "react-ace": "6.2.0",
     "react-dom": "16.12.0",
+    "react-color": "2.18.0",
     "react-feather": "2.0.3",
     "react-modal": "3.11.1",
     "react-paginate": "6.3.2",
@@ -86,6 +87,7 @@
     "sass": "1.23.6",
     "sass-loader": "8.0.0",
     "speed-measure-webpack-plugin": "1.3.1",
+    "raw-loader": "4.0.0",
     "style-loader": "1.0.0",
     "uglifyjs-webpack-plugin": "2.2.0",
     "url-loader": "2.2.0",
