Try to fix github workflow

--- a/.github/workflows/update-manual.yml
+++ b/.github/workflows/update-manual.yml
@@ -51,4 +51,5 @@ jobs:
       - name: Push documentation
         uses: ad-m/github-push-action@master
         with:
+          branch: ${{ github.head_ref }}
           github_token: ${{ secrets.GITHUB_TOKEN}}
