Try to understand github workflow

--- a/.github/workflows/update-manual.yml
+++ b/.github/workflows/update-manual.yml
@@ -46,9 +46,11 @@ jobs:
         run: echo ::set-output name=VERSION::$(echo $GITHUB_REF | cut -d / -f 3)
       - name: Commit files
         run: |
+          git status
           git config --local user.email "daikoku-github-actions@users.noreply.github.com"
           git config --local user.name "daikoku-github-actions"
           git commit -am "Update documentations for release ${{ steps.get_version.outputs.VERSION }}"
+          git status
       - name: Push documentation
         uses: ad-m/github-push-action@master
         with:
