WIP #63 - i18n mails send in controllers

--- a/daikoku/conf/application.conf
+++ b/daikoku/conf/application.conf
@@ -99,6 +99,7 @@ https.port = ${?HTTPS_PORT}
 
 play {
   application.loader = "fr.maif.otoroshi.daikoku.DaikokuLoader"
+  i18n.langs=[ "en" , "fr" ]
   modules {}
   filters {
     enabled = []
