--- a/daikoku/javascript/package.json
+++ b/daikoku/javascript/package.json
@@ -52,6 +52,7 @@
     "react-redux-toastr": "7.6.3",
     "react-router-dom": "5.1.2",
     "react-select": "3.0.8",
+    "react-step-wizard": "5.3.2",
     "react-table": "6.10.3",
     "recharts": "1.8.5",
     "redux": "4.0.4",
