--- a/daikoku/javascript/package.json
+++ b/daikoku/javascript/package.json
@@ -64,7 +64,8 @@
     "swagger-ui-dist": "3.24.3",
     "uuid": "3.3.3",
     "whatwg-fetch": "3.0.0",
-    "xstate": "4.8.0"
+    "xstate": "4.8.0",
+    "@xstate/react": "0.8.1"
   },
   "devDependencies": {
     "@babel/core": "7.7.2",
