--- a/daikoku/javascript/package.json
+++ b/daikoku/javascript/package.json
@@ -20,85 +20,82 @@
     "prepare": "yarn run snyk-protect"
   },
   "dependencies": {
-    "@fortawesome/fontawesome-free": "5.11.2",
-    "antd": "3.25.2",
-    "asciidoctor": "2.0.3",
+    "@fortawesome/fontawesome-free": "5.13.0",
+    "@xstate/react": "0.8.1",
+    "antd": "4.2.0",
+    "asciidoctor": "2.2.0",
     "bcryptjs": "2.4.3",
-    "bootstrap": "4.3.1",
+    "bootstrap": "4.4.1",
     "byte-converter": "0.1.4",
     "classnames": "2.2.6",
-    "connected-react-router": "6.6.0",
-    "deep-equal": "1.1.1",
+    "connected-react-router": "6.8.0",
     "es6-shim": "0.35.5",
     "faker": "4.1.0",
     "get-value": "3.0.1",
-    "highlight.js": "9.16.2",
+    "highlight.js": "10.0.2",
     "jquery": "3.5.0",
     "js-md5": "0.7.3",
-    "json5": "2.1.1",
-    "legally": "3.5.0",
+    "json5": "2.1.3",
     "lodash": "4.17.15",
-    "moment": "2.24.0",
-    "popper.js": "1.16.0",
+    "moment": "2.25.2",
     "prop-types": "15.7.2",
-    "query-string": "6.9.0",
-    "react": "16.12.0",
+    "query-string": "6.12.1",
+    "react": "16.13.1",
     "react-ace": "6.2.0",
-    "react-dom": "16.12.0",
-    "react-color": "2.18.0",
-    "react-feather": "2.0.3",
-    "react-modal": "3.11.1",
+    "react-color": "2.18.1",
+    "react-dom": "16.13.1",
+    "react-feather": "2.0.8",
+    "react-modal": "3.11.2",
     "react-paginate": "6.3.2",
-    "react-redux": "7.1.3",
-    "react-redux-toastr": "7.6.3",
+    "react-redux": "7.2.0",
+    "react-redux-toastr": "7.6.4",
     "react-router-dom": "5.1.2",
-    "react-select": "3.0.8",
+    "react-select": "3.1.0",
     "react-step-wizard": "5.3.2",
     "react-table": "6.10.3",
     "recharts": "1.8.5",
-    "redux": "4.0.4",
+    "redux": "4.0.5",
     "redux-logger": "3.0.6",
     "redux-thunk": "2.3.0",
-    "set-value": "3.0.1",
-    "snyk": "^1.316.1",
+    "set-value": "3.0.2",
     "showdown": "1.9.1",
-    "swagger-editor": "3.7.1",
-    "swagger-ui-dist": "3.24.3",
-    "uuid": "3.3.3",
+    "snyk": "^1.316.1",
+    "swagger-editor": "3.8.1",
+    "swagger-ui-dist": "3.25.1",
+    "uuid": "8.0.0",
     "whatwg-fetch": "3.0.0",
-    "xstate": "4.8.0",
-    "@xstate/react": "0.8.1"
+    "xstate": "4.9.1"
   },
   "devDependencies": {
-    "@babel/core": "7.7.2",
-    "@babel/plugin-proposal-class-properties": "7.7.0",
-    "@babel/plugin-syntax-dynamic-import": "7.2.0",
-    "@babel/preset-env": "7.7.1",
-    "@babel/preset-react": "7.7.0",
-    "babel-eslint": "10.0.3",
-    "babel-loader": "8.0.6",
+    "@babel/core": "7.9.6",
+    "@babel/plugin-proposal-class-properties": "7.8.3",
+    "@babel/plugin-syntax-dynamic-import": "7.8.3",
+    "@babel/preset-env": "7.9.6",
+    "@babel/preset-react": "7.9.4",
+    "babel-eslint": "10.1.0",
+    "babel-loader": "8.1.0",
     "babel-minify-webpack-plugin": "0.3.1",
-    "css-loader": "3.2.0",
-    "eslint": "6.6.0",
-    "eslint-plugin-react": "7.16.0",
-    "file-loader": "4.2.0",
-    "html-loader": "0.5.5",
-    "html-webpack-plugin": "3.2.0",
-    "mini-css-extract-plugin": "0.8.0",
-    "node-sass": "4.13.0",
+    "css-loader": "3.5.3",
+    "eslint": "6.8.0",
+    "eslint-plugin-react": "7.19.0",
+    "file-loader": "6.0.0",
+    "html-loader": "1.1.0",
+    "html-webpack-plugin": "4.3.0",
+    "mini-css-extract-plugin": "0.9.0",
+    "node-sass": "4.14.0",
     "optimize-css-assets-webpack-plugin": "5.0.3",
     "parcel-bundler": "1.12.4",
-    "prettier": "1.19.1",
-    "sass": "1.23.6",
-    "sass-loader": "8.0.0",
-    "speed-measure-webpack-plugin": "1.3.1",
-    "raw-loader": "4.0.0",
-    "style-loader": "1.0.0",
+    "prettier": "2.0.5",
+    "raw-loader": "4.0.1",
+    "sass": "1.26.5",
+    "sass-loader": "8.0.2",
+    "speed-measure-webpack-plugin": "1.3.3",
+    "style-loader": "1.2.1",
     "uglifyjs-webpack-plugin": "2.2.0",
-    "url-loader": "2.2.0",
-    "webpack": "4.41.2",
-    "webpack-cli": "3.3.10",
-    "webpack-dev-server": "3.9.0"
+    "url-loader": "4.1.0",
+    "webpack": "4.43.0",
+    "webpack-cli": "3.3.11",
+    "webpack-dev-server": "3.10.3"
   },
   "babel": {
     "presets": [
