--- a/daikoku/javascript/package.json
+++ b/daikoku/javascript/package.json
@@ -22,7 +22,7 @@
   "dependencies": {
     "@fortawesome/fontawesome-free": "5.13.0",
     "@xstate/react": "0.8.1",
-    "antd": "4.2.0",
+    "antd": "3.26.16",
     "asciidoctor": "2.2.0",
     "bcryptjs": "2.4.3",
     "bootstrap": "4.4.1",
@@ -38,6 +38,7 @@
     "json5": "2.1.3",
     "lodash": "4.17.15",
     "moment": "2.25.2",
+    "popper.js": "1.16.1",
     "prop-types": "15.7.2",
     "query-string": "6.12.1",
     "react": "16.13.1",
