--- a/daikoku/javascript/package.json
+++ b/daikoku/javascript/package.json
@@ -53,7 +53,8 @@
     "react-router-dom": "5.1.2",
     "react-select": "3.1.0",
     "react-step-wizard": "5.3.2",
-    "react-table": "6.10.3",
+    "react-table": "7.0.4",
+    "react-table-6": "6.11.0",
     "recharts": "1.8.5",
     "redux": "4.0.5",
     "redux-logger": "3.0.6",
