--- a/daikoku/conf/base.conf
+++ b/daikoku/conf/base.conf
@@ -107,7 +107,7 @@ play {
   http {
     filters = play.api.http.NoHttpFilters
     secret {
-      key = "secret"
+      key = "snTgnSr806O%yII^mIYn@m!c8q#nVTdv9go%5swCyw4$!wxDqU41gI&iCb^HPMY2"
       key = ${?PLAY_CRYPTO_SECRET}
     }
     session = {
