--- a/daikoku/conf/base.conf
+++ b/daikoku/conf/base.conf
@@ -43,6 +43,8 @@ daikoku {
   tenants {
     provider = "local" # can be local, header, hostname
     provider = ${?DAIKOKU_TENANT_PROVIDER}
+    hostheaderName = "Otoroshi-Proxied-Host"
+    hostheaderName = ${?DAIKOKU_TENANT_HOST_HEADERNAME}
   }
 
   exposition {
