FIX #109 - too large body request can return 413 error

--- a/daikoku/conf/base.conf
+++ b/daikoku/conf/base.conf
@@ -108,6 +108,9 @@ play {
   }
   http {
     filters = play.api.http.NoHttpFilters
+    parser = {
+      maxMemoryBuffer=2MB
+    }
     secret {
       key = "snTgnSr806O%yII^mIYn@m!c8q#nVTdv9go%5swCyw4$!wxDqU41gI&iCb^HPMY2"
       key = ${?PLAY_CRYPTO_SECRET}
