remove parcel from scripts
Upgrade packages

fix eslints

--- a/daikoku/javascript/package.json
+++ b/daikoku/javascript/package.json
@@ -6,55 +6,50 @@
   "license": "MIT",
   "private": true,
   "scripts": {
-    "build-login": "parcel build src/login.js --out-file dist/daikoku.login.min.js --global Daikoku",
-    "build-home": "parcel build src/home.js --out-file dist/daikoku.home.min.js --global Daikoku",
-    "build-app": "parcel build src/index.js --out-file dist/daikoku.min.js --global Daikoku",
-    "build": "yarn build-app && yarn build-login && yarn build-home && rm -rf ../public/react-app && mkdir ../public/react-app && cp -f ./dist/* ../public/react-app/",
-    "start": "parcel serve src/index.js --out-file daikoku.js -p 3000 --global Daikoku",
     "prettier": "prettier --write --single-quote --trailing-comma es5 --print-width 100 --tab-width 2 --jsx-bracket-same-line \"src/**/*.js\"",
     "test:eslint": "eslint src/ --ext .js --ext .jsx",
-    "webpack:start": "webpack-dev-server --port 3000 --host 0.0.0.0 --live-reload=true -d --color",
-    "webpack:watch": "webpack --watch --mode development --live-reload=true -d --color",
-    "webpack:build": "rm -rf ../public/react-app && mkdir ../public/react-app && webpack --mode production -p",
+    "start": "webpack-dev-server --port 3000 --host 0.0.0.0 --live-reload=true -d --color",
+    "watch": "webpack --watch --mode development --live-reload=true -d --color",
+    "build": "rm -rf ../public/react-app && mkdir ../public/react-app && webpack --mode production -p",
     "snyk-protect": "snyk protect",
     "prepare": "yarn run snyk-protect"
   },
   "dependencies": {
-    "@fortawesome/fontawesome-free": "5.13.0",
-    "@xstate/react": "0.8.1",
-    "antd": "4.3.3",
+    "@fortawesome/fontawesome-free": "5.15.1",
+    "@xstate/react": "1.0.1",
+    "antd": "4.7.3",
     "asciidoctor": "2.2.0",
     "bcryptjs": "2.4.3",
-    "bootstrap": "4.5.0",
+    "bootstrap": "4.5.3",
     "byte-converter": "0.1.4",
     "classnames": "2.2.6",
     "connected-react-router": "6.8.0",
-    "es6-shim": "0.35.5",
-    "faker": "4.1.0",
+    "es6-shim": "0.35.6",
+    "faker": "5.1.0",
     "get-value": "3.0.1",
-    "highlight.js": "10.0.3",
+    "highlight.js": "10.3.2",
     "jquery": "3.5.1",
     "js-md5": "0.7.3",
     "json5": "2.1.3",
-    "lodash": "4.17.19",
-    "moment": "2.26.0",
+    "lodash": "4.17.20",
+    "moment": "2.29.1",
     "popper.js": "1.16.1",
     "prop-types": "15.7.2",
-    "query-string": "6.13.0",
-    "react": "16.13.1",
+    "query-string": "6.13.6",
+    "react": "17.0.1",
     "react-ace": "6.2.0",
-    "react-color": "2.18.1",
-    "react-dom": "16.13.1",
+    "react-color": "2.19.3",
+    "react-dom": "17.0.1",
     "react-feather": "2.0.8",
     "react-modal": "3.11.2",
-    "react-paginate": "6.3.2",
-    "react-redux": "7.2.0",
+    "react-paginate": "6.5.0",
+    "react-redux": "7.2.2",
     "react-redux-toastr": "7.6.5",
     "react-router-dom": "5.2.0",
     "react-select": "3.1.0",
-    "react-step-wizard": "5.3.2",
-    "react-table": "7.2.0",
-    "react-tooltip": "4.2.6",
+    "react-step-wizard": "5.3.5",
+    "react-table": "7.6.1",
+    "react-tooltip": "4.2.10",
     "recharts": "1.8.5",
     "redux": "4.0.5",
     "redux-logger": "3.0.6",
@@ -62,11 +57,11 @@
     "set-value": "3.0.2",
     "showdown": "1.9.1",
     "snyk": "^1.337.0",
-    "swagger-editor": "3.13.1",
-    "swagger-ui-dist": "3.33.0",
-    "uuid": "8.1.0",
-    "whatwg-fetch": "3.0.0",
-    "xstate": "4.10.0"
+    "swagger-editor": "3.14.4",
+    "swagger-ui-dist": "3.36.0",
+    "uuid": "8.3.1",
+    "whatwg-fetch": "3.4.1",
+    "xstate": "4.13.0"
   },
   "devDependencies": {
     "@babel/core": "7.10.2",
@@ -78,16 +73,15 @@
     "babel-loader": "8.1.0",
     "babel-minify-webpack-plugin": "0.3.1",
     "css-loader": "3.5.3",
-    "eslint": "7.2.0",
-    "eslint-plugin-react": "7.20.0",
+    "eslint": "7.12.1",
+    "eslint-plugin-react": "7.21.5",
     "file-loader": "6.0.0",
     "html-loader": "1.1.0",
     "html-webpack-plugin": "4.3.0",
     "mini-css-extract-plugin": "0.9.0",
     "node-sass": "4.14.1",
-    "optimize-css-assets-webpack-plugin": "5.0.3",
-    "parcel-bundler": "1.12.4",
-    "prettier": "2.0.5",
+    "optimize-css-assets-webpack-plugin": "5.0.4",
+    "prettier": "2.1.2",
     "raw-loader": "4.0.1",
     "sass": "1.26.8",
     "sass-loader": "8.0.2",
