--- a/.github/workflows/update-dev-manual.yml
+++ b/.github/workflows/update-dev-manual.yml
@@ -31,5 +31,5 @@ jobs:
       - name: Push documentation
         uses: ad-m/github-push-action@master
         with:
-          branch: ${{ github.head_ref }}
+          branch: master
           github_token: ${{ secrets.GITHUB_TOKEN}}
