--- a/.travis.yml
+++ b/.travis.yml
@@ -25,7 +25,7 @@ before_install:
   - docker run -d -p 27017:27017 -v $(pwd)/mongo-data:/data/db mongo
   
 script:
-  - sh ./scripts/build.sh travis
+  - sh ./scripts/build.sh test
 
 cache:
   directories:
