--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,96 +1,153 @@
 name: Release Daikoku
-
 on:
-  push:
-    tags:
-      - v**
+  workflow_dispatch:
+    inputs:
+      lastVersion: 
+        description: 'last version'
+        required: true
+      releaseVersion:
+        description: 'release version'
+        required: true
+      nextVersion:
+        description: 'next version'
+        required: true
 
 jobs:
   release:
-    name: release Daikoku
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v2
-      # setup java to use sbt (?)
-      - name: Set up JDK 11
-        uses: actions/setup-java@v11
-        with:
-          java-version: 11
-      # install node 14 et yarn
-      - name: pre-release
-        run: |
-          sudo apt-get install wget curl
-          wget -qO- https://raw.githubusercontent.com/creationix/nvm/v0.33.2/install.sh | bash 
-          export NVM_DIR="/home/github/.nvm" 
-          sh $NVM_DIR/nvm.sh
-          nvm install 14
-          nvm use 14
-          curl -o- -L https://yarnpkg.com/install.sh | bash
-      # clean, build doc and build DK
-      - name: Build DK
-        run: sh ./scripts/build.sh github
-      # generate changlog to add on release body
-      - name: Create changelogs
-        id: changelogs
-        uses: heineiuo/create-changelogs@master
-      # create github release
-      - name: Create a Release
-        uses: actions/create-release@v1.1.4
-        with:
-          tag_name: ${{ github.ref }}
-          release_name: ${{ github.ref }}
-          body: ${{ steps.changelogs.outputs.changelogs }}
-          draft: false
-      # attach daikou.ajr, zip & doc to release
-      - name: Upload a Release Asset - daikoku.jar
-        uses: actions/upload-release-asset@v1.0.2
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        with:
-          upload_url: ${{ steps.create_release.outputs.upload_url }}
-          asset_path: ./daikoku/target/scala-2.13/daikoku.jar
-          asset_name: daikoku-${{ github.ref }}.jar
-          asset_content_type: application/octet-stream
-      - name: Upload a Release Asset - daikoku.zip
-        uses: actions/upload-release-asset@v1.0.2
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        with:
-          upload_url: ${{ steps.create_release.outputs.upload_url }}
-          asset_path: ./daikoku/target/universal/daikoku.zip
-          asset_name: daikoku-${{ github.ref }}.zip
-          asset_content_type: application/octet-stream
-      - name: Zip manual
-        run: zip -r $LOCATION/daikoku-manual.zip $LOCATION/docs/manual -x '*.DS_Store'
-      - name: Upload a Release Asset - manual
-        uses: actions/upload-release-asset@v1.0.2
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        with:
-          upload_url: ${{ steps.create_release.outputs.upload_url }}
-          asset_path: ./daikoku-manual.zip
-          asset_name: daikoku-manual-${{ github.ref }}.zip
-          asset_content_type: application/octet-stream
-      # build docker image
-      - name: Build docker image
-        run: sbt 'docker:publishLocal'
-      # publish docker image (latest & tagged)
-      - name: publish docker image
-        uses: manusa/actions-publish-docker@v1.1.2
-        with:
-          name: maif/daikoku
-          tag: ${{ github.ref }}
-          username: ${{ secrets.DOCKER_USER }}
-          password: ${{ secrets.DOCKER_PASSWORD }}
-      - name: publish docker image
-        uses: manusa/actions-publish-docker@v1.1.2
-        with:
-          name: maif/daikoku
-          tag: ${{ github.ref }}
-          username: ${{ secrets.DOCKER_USER }}
-          password: ${{ secrets.DOCKER_PASSWORD }}
-      # close milestone ==> launch release note action.
-      - name: Close milestone 
-        uses: adlerhsieh/prepare-release@v0.1.2
-        env: 
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+    - uses: actions/checkout@v2.2.0
+    # setup java to use sbt (?)
+    - name: Set up JDK 11
+      uses: actions/setup-java@v1
+      with:
+        java-version: 11
+    # install node 14
+    - name: setup node
+      uses: actions/setup-node@v1
+      with:
+        node-version: '14'
+    #format sources
+    - name: format sources
+      id: fmt
+      run: |
+        sh ./scripts/build.sh fmt
+        echo "::set-output name=diff::$(git diff --numstat | wc -l)"
+    - name: Commit formatted sources
+      if: steps.fmt.output.diff != '0'
+      run: |
+        git config --local user.email "daikoku-github-actions@users.noreply.github.com"
+        git config --local user.name "daikoku-github-actions"
+        git add --all
+        git commit -am "Format sources before release"
+    - name: Push formatted sources
+      if: steps.fmt.output.diff != '0'
+      uses: ad-m/github-push-action@master
+      with:
+        branch: master
+        github_token: ${{ secrets.GITHUB_TOKEN}}
+    #Build manual with right version
+    - name: build manual
+      id: manual
+      run: |
+        find ./manual/src/main/paradox -type f -name '*.md' | xargs node ./scripts/version.js ${{ github.event.inputs.lastVersion }} ${{ github.event.inputs.releaseversion }}
+        find ./docs -type f -name '*.html' -d 1 | xargs node ./scripts/version.js ${{ github.event.inputs.lastVersion }} ${{ github.event.inputs.releaseversion }}
+        sh ./scripts/build.sh manual
+        echo "::set-output name=diff::$(git diff --numstat | wc -l)"
+    - name: Commit manual
+      if: steps.manual.outputs.diff != '0'
+      run: |
+        git config --local user.email "daikoku-github-actions@users.noreply.github.com"
+        git config --local user.name "daikoku-github-actions"
+        git add --all
+        git commit -am "Update documentation before release"
+    - name: Push manual
+      uses: ad-m/github-push-action@master
+      if: steps.manual.outputs.diff != '0'
+      with:
+        branch: master
+        github_token: ${{ secrets.GITHUB_TOKEN}}
+    # release sbt (with auto commit tag)
+    - name: release sbt
+      run: |
+        git config --local user.email "daikoku-github-actions@users.noreply.github.com"
+        git config --local user.name "daikoku-github-actions"
+        cd daikoku
+        sbt "release with-defaults release-version ${{ github.event.inputs.releaseVersion }} next-version ${{ github.event.inputs.nextVersion }}"
+    - name: push tag
+      uses: ad-m/github-push-action@master
+      with:
+        branch: main
+        tags: true
+        github_token: ${{ secrets.GITHUB_TOKEN}}
+    # clean, build doc and build DK
+    - name: Build DK
+      run: sh ./scripts/build.sh github
+    # create github release
+    - name: Create a Release
+      id: create_release
+      uses: actions/create-release@v1.1.4
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      with:
+        tag_name: v${{ github.event.inputs.releaseversion }}
+        release_name: v${{ github.event.inputs.releaseversion }}
+        draft: false
+    # attach daikoku.jar, zip & manual.zip to github release
+    - name: Upload a Release Asset - daikoku.jar
+      uses: actions/upload-release-asset@v1.0.2
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      with:
+        upload_url: ${{ steps.create_release.outputs.upload_url }}
+        asset_path: ./daikoku/target/scala-2.13/daikoku.jar
+        asset_name: daikoku-${{ github.event.inputs.releaseversion }}.jar
+        asset_content_type: application/octet-stream
+    - name: Upload a Release Asset - daikoku.zip
+      uses: actions/upload-release-asset@v1.0.2
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      with:
+        upload_url: ${{ steps.create_release.outputs.upload_url }}
+        asset_path: ./daikoku/target/universal/daikoku.zip
+        asset_name: daikoku-${{ github.event.inputs.releaseversion }}.zip
+        asset_content_type: application/octet-stream
+    - name: Zip manual
+      run: zip -r ./daikoku-manual.zip ./docs/manual -x '*.DS_Store'
+    - name: Upload a Release Asset - manual
+      uses: actions/upload-release-asset@v1.0.2
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      with:
+        upload_url: ${{ steps.create_release.outputs.upload_url }}
+        asset_path: ./daikoku-manual.zip
+        asset_name: daikoku-manual-${{ github.event.inputs.releaseversion }}.zip
+        asset_content_type: application/octet-stream
+    # build docker image & upload it in docker hub
+    - name: Build docker image
+      run: sbt 'docker:publishLocal'
+    # publish docker image (latest & tagged)
+    - name: publish docker image
+      uses: manusa/actions-publish-docker@v1.1.2
+      with:
+        name: maif/daikoku
+        tag: ${{ github.event.inputs.releaseversion }}
+        username: ${{ secrets.DOCKER_USER }}
+        password: ${{ secrets.DOCKER_PASSWORD }}
+    - name: publish docker image
+      uses: manusa/actions-publish-docker@v1.1.2
+      with:
+        name: maif/daikoku
+        tag: ${{ github.event.inputs.releaseversion }}
+        username: ${{ secrets.DOCKER_USER }}
+        password: ${{ secrets.DOCKER_PASSWORD }}
+
+  # close milestone (with the latest release found)
+    - name: Close milestone 
+      uses: adlerhsieh/prepare-release@0.1.2
+      env: 
+        GITHUB_TOKEN: ${{ secrets.GH_PAT }}
+        REPO_OWNER: ${{ github.repository_owner }}
+        REPO: daikoku
+        IGNORE_MILESTONE_NOT_FOUND: true
+  
