--- a/daikoku/conf/base.conf
+++ b/daikoku/conf/base.conf
@@ -47,6 +47,10 @@ daikoku {
     hostheaderName = ${?DAIKOKU_TENANT_HOST_HEADERNAME}
   }
 
+  teams {
+    defaultApiKeyVisibility = "user" # can be admin, user
+  }
+
   exposition {
     provider = "none"
     provider = ${?DAIKOKU_EXPOSITION_PROVIDER}
