Add env value for config teams.defaultApiKeyVisibility
Update manual && Fix swagger errors

--- a/daikoku/conf/base.conf
+++ b/daikoku/conf/base.conf
@@ -49,6 +49,7 @@ daikoku {
 
   teams {
     defaultApiKeyVisibility = "user" # can be admin, user
+    defaultApiKeyVisibility = ${?DAIKOKU_TEAM_DEFAULT_APIKEY_VISIBILITY}
   }
 
   exposition {
