--- a/daikoku/javascript/package.json
+++ b/daikoku/javascript/package.json
@@ -10,14 +10,12 @@
     "test:eslint": "eslint src/ --ext .js --ext .jsx",
     "start": "webpack-dev-server --port 3000 --host 0.0.0.0 --live-reload=true -d --color",
     "watch": "webpack --watch --mode development --live-reload=true -d --color",
-    "build": "rm -rf ../public/react-app && mkdir ../public/react-app && webpack --mode production -p",
-    "snyk-protect": "snyk protect",
-    "prepare": "yarn run snyk-protect"
+    "build": "rm -rf ../public/react-app && mkdir ../public/react-app && webpack --mode production -p"
   },
   "dependencies": {
     "@fortawesome/fontawesome-free": "5.15.1",
-    "@xstate/react": "1.0.1",
-    "antd": "4.7.3",
+    "@xstate/react": "1.2.2",
+    "antd": "4.10.0",
     "asciidoctor": "2.2.1",
     "bcryptjs": "2.4.3",
     "bootstrap": "4.5.3",
@@ -27,7 +25,7 @@
     "es6-shim": "0.35.6",
     "faker": "5.1.0",
     "get-value": "3.0.1",
-    "highlight.js": "10.4.1",
+    "highlight.js": "10.5.0",
     "jquery": "3.5.1",
     "js-md5": "0.7.3",
     "json5": "2.1.3",
@@ -35,33 +33,32 @@
     "moment": "2.29.1",
     "popper.js": "1.16.1",
     "prop-types": "15.7.2",
-    "query-string": "6.13.6",
+    "query-string": "6.13.8",
     "react": "17.0.1",
-    "react-ace": "6.2.0",
+    "react-ace": "9.2.1",
     "react-color": "2.19.3",
     "react-dom": "17.0.1",
-    "react-feather": "2.0.8",
-    "react-modal": "3.11.2",
-    "react-paginate": "6.5.0",
+    "react-feather": "2.0.9",
+    "react-modal": "3.12.1",
+    "react-paginate": "7.0.0",
     "react-redux": "7.2.2",
     "react-redux-toastr": "7.6.5",
     "react-router-dom": "5.2.0",
-    "react-select": "3.1.0",
+    "react-select": "3.1.1",
     "react-step-wizard": "5.3.5",
-    "react-table": "7.6.1",
-    "react-tooltip": "4.2.10",
+    "react-table": "7.6.2",
+    "react-tooltip": "4.2.11",
     "recharts": "1.8.5",
     "redux": "4.0.5",
     "redux-logger": "3.0.6",
     "redux-thunk": "2.3.0",
     "set-value": "3.0.2",
     "showdown": "1.9.1",
-    "snyk": "^1.425.4",
-    "swagger-editor": "3.14.7",
-    "swagger-ui-dist": "3.36.0",
-    "uuid": "8.3.1",
-    "whatwg-fetch": "3.4.1",
-    "xstate": "4.13.0"
+    "swagger-editor": "3.14.8",
+    "swagger-ui-dist": "3.38.0",
+    "uuid": "8.3.2",
+    "whatwg-fetch": "3.5.0",
+    "xstate": "4.15.3"
   },
   "devDependencies": {
     "@babel/core": "7.10.2",
@@ -107,6 +104,5 @@
         }
       ]
     ]
-  },
-  "snyk": true
+  }
 }
