--- a/daikoku/javascript/package.json
+++ b/daikoku/javascript/package.json
@@ -8,9 +8,9 @@
   "scripts": {
     "prettier": "prettier --write --single-quote --trailing-comma es5 --print-width 100 --tab-width 2 --jsx-bracket-same-line \"src/**/*.js\"",
     "test:eslint": "eslint src/ --ext .js --ext .jsx",
-    "start": "webpack-dev-server --port 3000 --host 0.0.0.0 --live-reload=true -d --color",
+    "start": "webpack serve --port 3000 --host 0.0.0.0 --color --mode development",
     "watch": "webpack --watch --mode development --live-reload=true -d --color",
-    "build": "rm -rf ../public/react-app && mkdir ../public/react-app && webpack --mode production -p"
+    "build": "rm -rf ../public/react-app && mkdir ../public/react-app && webpack --mode production --progress"
   },
   "dependencies": {
     "@fortawesome/fontawesome-free": "5.15.1",
@@ -61,34 +61,34 @@
     "xstate": "4.15.3"
   },
   "devDependencies": {
-    "@babel/core": "7.10.2",
-    "@babel/plugin-proposal-class-properties": "7.10.1",
+    "@babel/core": "7.12.10",
+    "@babel/plugin-proposal-class-properties": "7.12.1",
     "@babel/plugin-syntax-dynamic-import": "7.8.3",
-    "@babel/preset-env": "7.10.2",
-    "@babel/preset-react": "7.10.1",
+    "@babel/preset-env": "7.12.11",
+    "@babel/preset-react": "7.12.10",
     "babel-eslint": "10.1.0",
-    "babel-loader": "8.1.0",
+    "babel-loader": "8.2.2",
     "babel-minify-webpack-plugin": "0.3.1",
-    "css-loader": "3.5.3",
-    "eslint": "7.12.1",
-    "eslint-plugin-react": "7.21.5",
-    "file-loader": "6.0.0",
-    "html-loader": "1.1.0",
-    "html-webpack-plugin": "4.3.0",
-    "mini-css-extract-plugin": "0.9.0",
-    "node-sass": "4.14.1",
+    "crypto-browserify": "^3.12.0",
+    "css-loader": "5.0.1",
+    "eslint": "7.17.0",
+    "eslint-plugin-react": "7.22.0",
+    "file-loader": "6.2.0",
+    "mini-css-extract-plugin": "1.3.3",
+    "node-sass": "5.0.0",
     "optimize-css-assets-webpack-plugin": "5.0.4",
-    "prettier": "2.1.2",
-    "raw-loader": "4.0.1",
-    "sass": "1.26.8",
-    "sass-loader": "8.0.2",
+    "path-browserify": "^1.0.1",
+    "prettier": "2.2.1",
+    "raw-loader": "4.0.2",
+    "sass": "1.32.0",
+    "sass-loader": "10.1.0",
     "speed-measure-webpack-plugin": "1.3.3",
-    "style-loader": "1.2.1",
+    "style-loader": "2.0.0",
     "uglifyjs-webpack-plugin": "2.2.0",
-    "url-loader": "4.1.0",
-    "webpack": "4.43.0",
-    "webpack-cli": "3.3.11",
-    "webpack-dev-server": "3.11.0"
+    "url-loader": "4.1.1",
+    "webpack": "4.44.2",
+    "webpack-cli": "4.3.1",
+    "webpack-dev-server": "3.11.1"
   },
   "babel": {
     "presets": [
