--- a/daikoku/conf/application.conf
+++ b/daikoku/conf/application.conf
@@ -1,1 +1,14 @@
 include "base.conf"
+
+; db.default.driver=org.postgresql.Driver
+; db.default.url="jdbc:postgresql://localhost/postgres?currentSchema=daikoku"
+; db.default.username=postgres
+; db.default.password=postgres
+
+contexts {
+    database {
+        fork-join-executor {
+            parallelism-max = 9
+        }
+    }
+}
