--- a/daikoku/conf/application.test.conf
+++ b/daikoku/conf/application.test.conf
@@ -12,3 +12,11 @@ daikoku {
 mongodb {
   uri = "mongodb://localhost:27017/daikoku-tests"
 }
+
+contexts {
+    database {
+        fork-join-executor {
+            parallelism-max = 9
+        }
+    }
+}
