--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,7 +1,12 @@
 name: Build
-on: [push, pull_request]
-  paths:
-      - 'daikoku/app/**'
+on:
+  push:
+    paths:
+    - 'daikoku/app/**'
+  pull_request:
+    paths:
+    - 'daikoku/app/**'
+    
 
 jobs:
   test:
