--- a/.github/workflows/front-office-tests.yml
+++ b/.github/workflows/front-office-tests.yml
@@ -25,7 +25,7 @@ jobs:
         cd daikoku
         sbt 'run -Dhttp.port=9000 -Ddaikoku.mode=Dev -Ddaikoku.init.data.from=javascript/cypress/cypress-test-export.ndjson' &
     - name: run frontend
-      id: run and test frontend
+      id: run_test
       run: |
         cd daikoku/javascript
         yarn
