--- a/.github/workflows/front-office-tests.yml
+++ b/.github/workflows/front-office-tests.yml
@@ -23,8 +23,7 @@ jobs:
       run: |
         cd daikoku
         sbt 'run -Dhttp.port=9000 -Ddaikoku.mode=Dev -Ddaikoku.init.data.from=javascript/cypress/cypress-test-export.ndjson' &
-        - name: run backend in Background
-    - name: install ajvascript deps
+    - name: install javascript deps
       run: |
         cd javascript
         yarn
