--- a/.github/workflows/front-office-tests.yml
+++ b/.github/workflows/front-office-tests.yml
@@ -25,7 +25,7 @@ jobs:
         sbt 'run -Dhttp.port=9000 -Ddaikoku.mode=Dev -Ddaikoku.init.data.from=javascript/cypress/cypress-test-export.ndjson' &
     - name: install javascript deps
       run: |
-        cd javascript
+        cd daikoku/javascript
         yarn
     - name: Cypress run
       uses: cypress-io/github-action@v2
