--- a/.github/workflows/front-office-tests.yml
+++ b/.github/workflows/front-office-tests.yml
@@ -23,14 +23,13 @@ jobs:
       run: |
         cd daikoku
         sbt 'run -Dhttp.port=9000 -Ddaikoku.init.data.from=javascript/cypress/cypress-test-export.ndjson' &
-    # - name: install javascript deps
-    #   run: |
-    #     cd daikoku/javascript
-    #     yarn
+    - name: install javascript deps
+      run: |
+        cd daikoku/javascript
+        yarn build
     - name: Cypress run
       uses: cypress-io/github-action@v2
       with:
-        start: yarn build
         wait-on: 'http://localhost:9000'
         command: yarn test:cypress
         working-directory: daikoku/javascript
