--- a/.github/workflows/front-office-tests.yml
+++ b/.github/workflows/front-office-tests.yml
@@ -8,10 +8,19 @@ on:
     paths:
       - 'daikoku/app/**'
       - 'daikoku/javascript/**'
+  workflow_dispatch:
+  
 jobs:
   cypress-run:
     name: Cypress run
-    runs-on: ubuntu-16.04
+    runs-on: ubuntu-latest
+
+    services:
+      mongodb:
+        image: mongo
+        ports:
+        - 27017:27017
+
     steps:
     - name: Checkout
       uses: actions/checkout@v2.2.0
