get postgres configuration from conf

--- a/daikoku/conf/application.conf
+++ b/daikoku/conf/application.conf
@@ -1,9 +1,10 @@
 include "base.conf"
 
-; db.default.driver=org.postgresql.Driver
-; db.default.url="jdbc:postgresql://localhost/postgres?currentSchema=daikoku"
-; db.default.username=postgres
-; db.default.password=postgres
+db.default.driver=org.postgresql.Driver
+db.default.url="jdbc:postgresql://localhost/postgres?currentSchema=daikoku"
+db.default.name=daikoku
+db.default.username=postgres
+db.default.password=postgres
 
 contexts {
     database {
