--- a/daikoku/conf/application.test.conf
+++ b/daikoku/conf/application.test.conf
@@ -13,6 +13,12 @@ mongodb {
   uri = "mongodb://localhost:27017/daikoku-tests"
 }
 
+db.default.driver=org.postgresql.Driver
+db.default.url="jdbc:postgresql://localhost/postgres?currentSchema=daikoku"
+db.default.name=daikoku
+db.default.username=postgres
+db.default.password=postgres
+
 contexts {
     database {
         fork-join-executor {
