--- a/.github/workflows/front-office-tests.yml
+++ b/.github/workflows/front-office-tests.yml
@@ -43,3 +43,28 @@ jobs:
         wait-on: 'http://localhost:9000'
         command: yarn test:cypress
         working-directory: daikoku/javascript
+      continue-on-error: true
+    - name: Copy test execution videos
+      if: ${{ failure() }}
+      run: |
+        mkdir report
+        cp -r cypress/videos report/videos
+    - name: Merge test results into one
+      if: ${{ failure() }}
+      run: yarn cypress:report:merge    
+    - name: Generate HTML report
+      if: ${{ failure() }}
+      run: yarn cypress:report:generate
+    - name: Commit files
+      if: ${{ failure() }}
+      run: |
+        git config --local user.email "daikoku-github-actions@users.noreply.github.com"
+        git config --local user.name "daikoku-github-actions"
+        git add --all
+        git commit -am "Add cypress tests report"
+    - name: Push documentation
+      if: ${{ failure() }}
+      uses: ad-m/github-push-action@master
+      with:
+        branch: master
+        github_token: ${{ secrets.GITHUB_TOKEN}}
