--- a/daikoku/javascript/package.json
+++ b/daikoku/javascript/package.json
@@ -12,7 +12,7 @@
     "watch": "webpack --watch --mode development --liveReload -d --color",
     "build": "rm -rf ../public/react-app && mkdir ../public/react-app && webpack --mode production --progress",
     "cypress": "cypress open",
-    "test:cypress": "cypress run",
+    "test:cypress": "cypress run --record --key $CYPRESS_RECORD_KEY",
     "cypress:report:merge": "mochawesome-merge cypress/results/json/*.json > cypress/results/index.json",
     "cypress:report:generate": "marge cypress/results/index.json --reportDir report --assetsDir report/assets --reportPageTitle index.html"
   },
@@ -76,15 +76,10 @@
     "crypto-browserify": "^3.12.0",
     "css-loader": "5.0.1",
     "cypress": "6.2.1",
-    "cypress-multi-reporters": "1.4.0",
     "eslint": "7.17.0",
     "eslint-plugin-react": "7.22.0",
     "file-loader": "6.2.0",
     "mini-css-extract-plugin": "1.3.3",
-    "mocha": "8.1.3",
-    "mochawesome": "6.1.1",
-    "mochawesome-merge": "4.2.0",
-    "mochawesome-report-generator": "5.1.0",
     "node-sass": "5.0.0",
     "optimize-css-assets-webpack-plugin": "5.0.4",
     "path-browserify": "^1.0.1",
