FIX action file

--- a/.github/workflows/front-office-tests.yml
+++ b/.github/workflows/front-office-tests.yml
@@ -44,4 +44,5 @@ jobs:
         command: yarn test:cypress
         working-directory: daikoku/javascript
       continue-on-error: true
-      env: CYPRESS_RECORD_KEY: ${{ secrets.CYPRESS_RECORD_KEY }}
+      env: 
+        CYPRESS_RECORD_KEY: ${{ secrets.CYPRESS_RECORD_KEY }}
