--- a/.github/workflows/front-office-tests.yml
+++ b/.github/workflows/front-office-tests.yml
@@ -40,7 +40,7 @@ jobs:
     - name: Cypress run and publish report
       uses: cypress-io/github-action@v2
       with:
-        start: cd .. && sbt  'run -Dhttp.port=9000 -Ddaikoku.init.data.from=javascript/cypress/cypress-test-export.ndjson'
+        start: yarn cypress:start:backend
         wait-on: 'http://localhost:9000'
         command: yarn test:cypress
         working-directory: daikoku/javascript
