--- a/.github/workflows/front-office-tests.yml
+++ b/.github/workflows/front-office-tests.yml
@@ -28,14 +28,40 @@ jobs:
       uses: actions/setup-java@v1
       with:
         java-version: 11
+    - uses: coursier/cache-action@v5
     - name: initialize backend build
       run: |
         cd daikoku
         sbt  ';clean;compile'
-    - name: install javascript deps
+
+
+    - name: Get yarn cache directory path
+      id: yarn-cache-dir-path
+      run: |
+          echo "::set-output name=dir::$(yarn cache dir)"
+    - name: CACHE ACTION
+      uses: actions/cache@v2
+      env:
+          cache-version: v1
+      id: yarn-cache
+      with:
+        path: |
+            ${{ steps.yarn-cache-dir-path.outputs.dir }}
+            **/node_modules
+        key: ${{ runner.os }}-yarn-${{ env.cache-version }}-${{ hashFiles('**/yarn.lock') }}
+        restore-keys: |
+            ${{ runner.os }}-yarn-${{ env.cache-version }}-
+            ${{ runner.os }}-yarn-
+            ${{ runner.os }}-
+    - name: Installing dependencies
+      if: steps.yarn-cache.outputs.cache-hit != 'true'
       run: |
         cd daikoku/javascript
-        yarn
+        echo "YARN CACHE CHANGED"
+        yarn install
+    - name: build javascript
+      run: |
+        cd daikoku/javascript
         yarn build
     - name: Cypress run and publish report
       uses: cypress-io/github-action@v2
