--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -22,6 +22,7 @@ jobs:
       uses: actions/setup-java@v1
       with:
         java-version: 11
+    - uses: coursier/cache-action@v5
     # install node 14
     - name: setup node
       uses: actions/setup-node@v1
@@ -80,6 +81,24 @@ jobs:
         branch: master
         tags: true
         github_token: ${{ secrets.GITHUB_TOKEN}}
+    - name: Get yarn cache directory path
+      id: yarn-cache-dir-path
+      run: |
+          echo "::set-output name=dir::$(yarn cache dir)"
+    - name: CACHE ACTION
+      uses: actions/cache@v2
+      env:
+          cache-version: v1
+      id: yarn-cache
+      with:
+        path: |
+            ${{ steps.yarn-cache-dir-path.outputs.dir }}
+            **/node_modules
+        key: ${{ runner.os }}-yarn-${{ env.cache-version }}-${{ hashFiles('**/yarn.lock') }}
+        restore-keys: |
+            ${{ runner.os }}-yarn-${{ env.cache-version }}-
+            ${{ runner.os }}-yarn-
+            ${{ runner.os }}-
     # clean, build doc and build DK
     - name: Build DK
       run: sh ./scripts/build.sh github
