read conf to select dataStore

--- a/daikoku/conf/application.test.conf
+++ b/daikoku/conf/application.test.conf
@@ -7,22 +7,19 @@ daikoku {
   tenants {
     provider = "hostname"
   }
+
+  postgres {
+      host = "localhost"
+      schema = "daikoku"
+      database = "postgres"
+      username = "postgres"
+      password = "postgres"
+      port = 5432
+  }
+
+  storage = "mongo"
 }
 
 mongodb {
   uri = "mongodb://localhost:27017/daikoku-tests"
-}
-
-db.default.driver=org.postgresql.Driver
-db.default.url="jdbc:postgresql://localhost/postgres?currentSchema=daikoku"
-db.default.name=daikoku
-db.default.username=postgres
-db.default.password=postgres
-
-contexts {
-    database {
-        fork-join-executor {
-            parallelism-max = 9
-        }
-    }
 }
