--- a/daikoku/conf/base.conf
+++ b/daikoku/conf/base.conf
@@ -8,6 +8,8 @@ daikoku {
   exposedOn = ${http.port}
   exposedOn = ${?DAIKOKU_EXPOSED_ON}
 
+  storage = "postgres"
+
   api {
     type = "local"
     type = ${?DAIKOKU_API_TYPE}
