--- a/daikoku/conf/application.conf
+++ b/daikoku/conf/application.conf
@@ -1,15 +1,14 @@
 include "base.conf"
 
-db.default.driver=org.postgresql.Driver
-db.default.url="jdbc:postgresql://localhost/postgres?currentSchema=daikoku"
-db.default.name=daikoku
-db.default.username=postgres
-db.default.password=postgres
-
-contexts {
-    database {
-        fork-join-executor {
-            parallelism-max = 9
-        }
-    }
+daikoku {
+  postgres {
+      host = "localhost"
+      schema = "daikoku"
+      database = "postgres"
+      username = "postgres"
+      password = "postgres"
+      port = 5432
+  }
 }
+
+storage = "postgres"
