--- a/daikoku/conf/application.test.conf
+++ b/daikoku/conf/application.test.conf
@@ -8,16 +8,7 @@ daikoku {
     provider = "hostname"
   }
 
-  postgres {
-      host = "localhost"
-      schema = "daikoku"
-      database = "postgres"
-      username = "postgres"
-      password = "postgres"
-      port = 5432
-  }
-
-  storage = "postgres"
+  storage = "mongo"
 }
 
 mongodb {
