used mongo in production

--- a/daikoku/conf/application.conf
+++ b/daikoku/conf/application.conf
@@ -1,14 +1,14 @@
 include "base.conf"
 
-daikoku {
-  postgres {
-      host = "localhost"
-      schema = "daikoku"
-      database = "postgres"
-      username = "postgres"
-      password = "postgres"
-      port = 5432
-  }
-}
+; daikoku {
+;   postgres {
+;       host = "localhost"
+;       schema = "daikoku"
+;       database = "postgres"
+;       username = "postgres"
+;       password = "postgres"
+;       port = 5432
+;   }
+; }
 
-storage = "postgres"
+storage = "mongo"
