--- a/daikoku/conf/base.conf
+++ b/daikoku/conf/base.conf
@@ -8,7 +8,7 @@ daikoku {
   exposedOn = ${http.port}
   exposedOn = ${?DAIKOKU_EXPOSED_ON}
 
-  storage = "postgres"
+  storage = "mongo"
 
   api {
     type = "local"
