--- a/daikoku/conf/base.conf
+++ b/daikoku/conf/base.conf
@@ -9,6 +9,16 @@ daikoku {
   exposedOn = ${?DAIKOKU_EXPOSED_ON}
 
   storage = "mongo"
+  storage = ${?DAIKOKU_STORAGE}
+
+  postgres {
+      host = ${?DAIKOKU_POSTGRES_HOST}
+      schema = ${?DAIKOKU_POSTGRES_SCHEMA}
+      database = ${?DAIKOKU_POSTGRES_DATABASE}
+      username = ${?DAIKOKU_POSTGRES_USERNAME}
+      password = ${?DAIKOKU_POSTGRES_PASSWORD}
+      port = ${?DAIKOKU_POSTGRES_PORT}
+  }
 
   api {
     type = "local"
