--- a/.gitignore
+++ b/.gitignore
@@ -17,4 +17,5 @@ mongo-data
 /demo/config/redis-data/
 daikoku/javascript/cypress/videos
 daikoku/javascript/cypress/results
+daikoku/javascript/cypress/screenshots
 daikoku/javascript/index.json
