wip : migration done - maintenance mode to confirm

--- a/daikoku/conf/base.conf
+++ b/daikoku/conf/base.conf
@@ -12,12 +12,20 @@ daikoku {
   storage = ${?DAIKOKU_STORAGE}
 
   postgres {
+      host = "localhost"
       host = ${?DAIKOKU_POSTGRES_HOST}
+      schema = "public"
       schema = ${?DAIKOKU_POSTGRES_SCHEMA}
+      database = "default"
       database = ${?DAIKOKU_POSTGRES_DATABASE}
+      username = "postgres"
       username = ${?DAIKOKU_POSTGRES_USERNAME}
+      password = "postgres"
       password = ${?DAIKOKU_POSTGRES_PASSWORD}
+      port = 5432
       port = ${?DAIKOKU_POSTGRES_PORT}
+      poolSize = 30
+      poolSize = ${?DAIKOKU_POSTGRES_POOLSIZE}
   }
 
   api {
