wip rework pg helper to prepared statements

--- a/daikoku/conf/application.test.conf
+++ b/daikoku/conf/application.test.conf
@@ -7,6 +7,11 @@ daikoku {
   tenants {
     provider = "hostname"
   }
+
+  storage = "postgres"
+  postgres = {
+    database = postgres
+  }
 }
 
 mongodb {
