Run action when action is modified

--- a/.github/workflows/front-office-tests.yml
+++ b/.github/workflows/front-office-tests.yml
@@ -4,6 +4,7 @@ on:
     paths:
       - 'daikoku/app/**'
       - 'daikoku/javascript/**'
+      - '.github/workflows/front-office-tests.yml'
   pull_request:
     paths:
       - 'daikoku/app/**'
