--- a/daikoku/javascript/package.json
+++ b/daikoku/javascript/package.json
@@ -77,6 +77,7 @@
     "crypto-browserify": "^3.12.0",
     "css-loader": "5.0.1",
     "cypress": "7.1.0",
+    "cypress-waitfor": "1.1.0",
     "eslint": "7.17.0",
     "eslint-plugin-react": "7.22.0",
     "file-loader": "6.2.0",
