Remove postgres from test conf file

--- a/daikoku/conf/application.test.conf
+++ b/daikoku/conf/application.test.conf
@@ -8,10 +8,10 @@ daikoku {
     provider = "hostname"
   }
 
-  storage = "postgres"
-  postgres = {
-    database = "postgres"
-  }
+;   storage = "postgres"
+;   postgres = {
+;     database = "postgres"
+;   }
 }
 
 mongodb {
