--- a/daikoku/conf/base.conf
+++ b/daikoku/conf/base.conf
@@ -26,6 +26,22 @@ daikoku {
       port = ${?DAIKOKU_POSTGRES_PORT}
       poolSize = 30
       poolSize = ${?DAIKOKU_POSTGRES_POOLSIZE}
+      ssl {
+        enabled = false
+        enabled = ${?DAIKOKU_POSTGRES_SSL_ENABLED}
+        mode = "verify-ca"
+        mode = ${?DAIKOKU_POSTGRES_SSL_MODE}
+        trusted-certs-path = []
+        trusted-certs = []
+        trusted-cert-path = ${?DAIKOKU_POSTGRES_SSL_TRUSTED_CERT_PATH}
+        trusted-cert = ${?DAIKOKU_POSTGRES_SSL_TRUSTED_CERT}
+        client-certs-path = []
+        client-certs = []
+        client-keys-path = []
+        client-cert-path = ${?DAIKOKU_POSTGRES_SSL_CLIENT_CERT_PATH}
+        client-cert = ${?DAIKOKU_POSTGRES_SSL_CLIENT_CERT}
+        trust-all = ${?DAIKOKU_POSTGRES_SSL_TRUST_ALL}
+      }
   }
 
   api {
