--- a/daikoku/conf/base.conf
+++ b/daikoku/conf/base.conf
@@ -14,16 +14,21 @@ daikoku {
   postgres {
       host = "localhost"
       host = ${?DAIKOKU_POSTGRES_HOST}
+      host = ${?POSTGRESQL_ADDON_HOST}
       schema = "public"
       schema = ${?DAIKOKU_POSTGRES_SCHEMA}
       database = "default"
       database = ${?DAIKOKU_POSTGRES_DATABASE}
+      database = ${?POSTGRESQL_ADDON_DB}
       username = "postgres"
       username = ${?DAIKOKU_POSTGRES_USERNAME}
+      username = ${?POSTGRESQL_ADDON_USER}
       password = "postgres"
       password = ${?DAIKOKU_POSTGRES_PASSWORD}
+      password = ${?POSTGRESQL_ADDON_PASSWORD}
       port = 5432
       port = ${?DAIKOKU_POSTGRES_PORT}
+      port = ${?POSTGRESQL_ADDON_PORT}
       poolSize = 30
       poolSize = ${?DAIKOKU_POSTGRES_POOLSIZE}
       ssl {
