--- a/daikoku/conf/application.test.conf
+++ b/daikoku/conf/application.test.conf
@@ -7,6 +7,12 @@ daikoku {
   tenants {
     provider = "hostname"
   }
+
+  storage = "postgres"
+  postgres = {
+    database = "postgres"
+    password = "password"
+  }
 }
 
 mongodb {
